# set-up-ib9jho-environment-wkj2021-0629

./: CMakeLists.txt  README.md  local-setup.md
.devcontainer/: devcontainer.json
src/: main.cpp
tests/: CMakeLists.txt  compare_files.cpp  test_main.cpp
tests/IO/: correct_output.txt
